<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expensesCategoryFiltrationTitle"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/expenseList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <GridLayout
        android:id="@+id/radioGroupTransactionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:columnCount="3"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health" />

        <RadioButton
            android:id="@+id/radioButtonLeisure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leisure" />

        <RadioButton
            android:id="@+id/radioButtonHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house" />

        <RadioButton
            android:id="@+id/radioButtonCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe" />

        <RadioButton
            android:id="@+id/radioButtonEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education" />

        <RadioButton
            android:id="@+id/radioButtonGifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift" />

        <RadioButton
            android:id="@+id/radioButtonFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </GridLayout>

    <Button
        android:id="@+id/filterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter" />
</LinearLayout>
