<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incomesCategoryFiltrationTitle"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/expenseList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <RadioGroup
        android:id="@+id/radioGroupTransactionCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/radioButtonSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary" />

        <RadioButton
            android:id="@+id/radioButtonGifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift" />

        <RadioButton
            android:id="@+id/radioButtonInvestments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/investments" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

    <Button
        android:id="@+id/filterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter" />
</LinearLayout>
