<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".expenses.AddExpenseActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="102dp"
        android:text="@string/addExpenses"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSum"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="no"
        android:hint="@string/sum"
        android:maxLength="7"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transactionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactionCategory"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"

        app:layout_constraintBottom_toTopOf="@+id/radioGroupTransactionCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText" />

    <GridLayout
        android:id="@+id/radioGroupTransactionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health" />

        <RadioButton
            android:id="@+id/radioButtonLeisure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leisure" />

        <RadioButton
            android:id="@+id/radioButtonHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house" />

        <RadioButton
            android:id="@+id/radioButtonCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe" />

        <RadioButton
            android:id="@+id/radioButtonEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education" />

        <RadioButton
            android:id="@+id/radioButtonGifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift" />

        <RadioButton
            android:id="@+id/radioButtonFood"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/food" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </GridLayout>

    <ImageButton
        android:id="@+id/datePicker"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/oval_button"

        android:importantForAccessibility="no"
        android:onClick="onClickDatePicker"
        android:text="@string/chooseDate"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="@+id/transactionComment"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        app:srcCompat="@android:drawable/ic_menu_today"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/transactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:text="@string/transactionDate"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText" />

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="01/01/2024"
        android:ems="10"
        android:hint="@string/date"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/transactionComment"
        app:layout_constraintEnd_toEndOf="@+id/transactionComment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/transactionComment"
        app:layout_constraintTop_toBottomOf="@+id/transactionCategory"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/transactionComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/comment"
        android:importantForAutofill="no"
        android:maxLength="24"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/addTransactionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/addTransactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/comment"
        app:layout_constraintBottom_toTopOf="@+id/transactionComment"
        app:layout_constraintEnd_toEndOf="@+id/transactionComment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/transactionComment" />

</androidx.constraintlayout.widget.ConstraintLayout>
