<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".expenses.EditExpenseActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/editExpense"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label" />

    <EditText
        android:id="@+id/editExpenseAmount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/sum"
        android:maxLength="7"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentValueLabel" />

    <TextView
        android:id="@+id/transactionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/transactionCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@id/editExpenseAmount" />

    <GridLayout
        android:id="@+id/radioGroupTransactionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionCategory">

        <RadioButton
            android:id="@+id/radioButtonHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health" />

        <RadioButton
            android:id="@+id/radioButtonLeisure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leisure" />

        <RadioButton
            android:id="@+id/radioButtonHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house" />

        <RadioButton
            android:id="@+id/radioButtonCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe" />

        <RadioButton
            android:id="@+id/radioButtonEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education" />

        <RadioButton
            android:id="@+id/radioButtonGifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift" />

        <RadioButton
            android:id="@+id/radioButtonFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </GridLayout>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:text="@string/transactionDate"
        app:layout_constraintBottom_toTopOf="@+id/editExpenseDate"
        app:layout_constraintStart_toStartOf="@+id/editExpenseDate" />

    <TextView
        android:id="@+id/editExpenseDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/date"
        android:inputType="date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/datePicker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editExpenseComment" />
    <ImageButton
        android:id="@+id/datePicker"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/oval_button"
        android:importantForAccessibility="no"
        android:onClick="onClickDatePicker"
        app:layout_constraintBottom_toBottomOf="@id/editExpenseDate"
        app:layout_constraintEnd_toEndOf="@+id/editExpenseComment"
        app:layout_constraintTop_toTopOf="@id/editExpenseDate"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_today" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/comment"
        app:layout_constraintBottom_toTopOf="@+id/editExpenseComment"
        app:layout_constraintEnd_toEndOf="@+id/editExpenseComment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editExpenseComment" />

    <EditText
        android:id="@+id/editExpenseComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/comment"
        android:inputType="text"
        android:minHeight="48dp"
        android:maxLength="24"
        app:layout_constraintBottom_toTopOf="@+id/saveExpenseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveExpenseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
