<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setPin"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="120dp"/>

    <EditText
        android:id="@+id/pin_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterPin"
        android:maxLength="4"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/confirm_pin_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPin"
        android:maxLength="4"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/save_pin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="16dp"/>

</LinearLayout>
