<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".incomes.AddIncomeActivity"
    tools:layout_editor_absoluteX="2dp"
    tools:layout_editor_absoluteY="-23dp">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="102dp"
        android:text="@string/addIncomes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSum"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:gravity="center"
        android:hint="@string/sum"
        android:maxLength="7"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <TextView
        android:id="@+id/transactionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/transactionCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextSum" />

    <GridLayout
        android:id="@+id/radioGroupTransactionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/dateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionCategory"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButtonSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary" />

        <RadioButton
            android:id="@+id/radioButtonGifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift" />

        <RadioButton
            android:id="@+id/radioButtonInvestments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/investments" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/transactionDate"
        app:layout_constraintBottom_toTopOf="@+id/dateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextSum"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/datePicker"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/oval_button"
        android:onClick="onClickCalendar"
        android:text="@string/chooseDate"
        app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
        app:layout_constraintEnd_toEndOf="@+id/transactionComment"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/dateTextView"
        app:layout_constraintTop_toTopOf="@+id/dateTextView"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@android:drawable/ic_menu_today"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/transactionComment"
        app:layout_constraintEnd_toEndOf="@+id/transactionComment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/transactionComment"
        app:layout_constraintTop_toBottomOf="@+id/transactionCategory"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/transactionComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/comment"
        android:importantForAutofill="no"
        android:maxLength="24"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/addTransactionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/addTransactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/comment"
        app:layout_constraintBottom_toTopOf="@+id/transactionComment"
        app:layout_constraintEnd_toEndOf="@+id/transactionComment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/transactionComment" />

</androidx.constraintlayout.widget.ConstraintLayout>
